# Assignment_-OfferFit

./: README.md  csv_test.csv  main.py  pyproject.toml  requirements.txt
app/: main.py  persist_data.csv  schemas.py
app/test/: test_main.py
