[tool.poetry]
name = "assignment-offerfit"
version = "0.1.0"
description = "Task-home"
authors = ["JennyCGT <jenniferguayta@gmail.com>"]
readme = "README.md"
packages = [{include = "assignment_offerfit"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pandas = "^2.1.3"
pytest = "^7.4.3"
httpx = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
